--- a/app/src/main/res/layout/activity_apods_list.xml
+++ b/app/src/main/res/layout/activity_apods_list.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/header" />
+        android:src="@drawable/night" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -31,14 +31,14 @@
 
             <EditText
                 android:id="@+id/Date"
-                android:layout_width="310dp"
-                android:layout_height="72dp"
+                android:layout_width="291dp"
+                android:layout_height="90dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="19dp"
                 android:layout_marginTop="18dp"
-                android:layout_marginEnd="56dp"
+                android:layout_marginEnd="91dp"
                 tools:ignore="MissingConstraints" />
 
             <TextView
@@ -47,18 +47,18 @@
                 android:layout_height="32dp"
                 android:layout_above="@+id/btnSubmit1"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="49dp"
+                android:layout_marginEnd="213dp"
                 android:layout_marginBottom="-40dp"
                 android:text="Hint: 2020 January 15" />
 
             <Button
                 android:id="@+id/btnSubmit1"
-                android:layout_width="171dp"
-                android:layout_height="64dp"
+                android:layout_width="101dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginEnd="250dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="47dp"
+                android:layout_marginBottom="10dp"
                 android:text="Submit" />
 
         </RelativeLayout>
@@ -75,7 +75,7 @@
 
         <TextView
             android:id="@+id/errorTextView"
-            android:text=""
+            android:text="Error"
             android:layout_width="316dp"
             android:layout_height="50dp" />
 
@@ -83,6 +83,10 @@
             android:id="@+id/progressBar"
             android:layout_width="300dp"
             android:layout_height="50dp" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/recyclerview"/>
 
     </LinearLayout>
 
