--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -20,25 +20,25 @@
 
     <TextView
         android:id="@+id/appNameTextView"
-        android:layout_width="372dp"
-        android:layout_height="95dp"
+        android:layout_width="204dp"
+        android:layout_height="47dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="40dp"
         android:text="Space Pirate"
         android:textColor="@color/colorAccent"
-        android:textSize="60sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.589"
+        app:layout_constraintHorizontal_bias="0.557"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView"
         tools:ignore="MissingConstraints" />
 
     <ImageButton
         android:id="@+id/techportbutton"
-        android:layout_width="137dp"
-        android:layout_height="148dp"
+        android:layout_width="108dp"
+        android:layout_height="114dp"
         android:background="@drawable/roundcorner"
         android:text="Techport"
         app:layout_constraintBottom_toTopOf="@+id/asteroidbutton"
@@ -66,8 +66,8 @@
 
     <ImageButton
         android:id="@+id/Imagesbutton"
-        android:layout_width="160dp"
-        android:layout_height="328dp"
+        android:layout_width="132dp"
+        android:layout_height="278dp"
         android:text="Images"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -94,9 +94,9 @@
 
     <ImageButton
         android:id="@+id/asteroidbutton"
+        android:layout_width="112dp"
+        android:layout_height="141dp"
         android:text="Asteroids"
-        android:layout_width="138dp"
-        android:layout_height="159dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.153"
@@ -123,29 +123,31 @@
 
     <ImageButton
         android:id="@+id/button1"
-        android:layout_width="327dp"
-        android:layout_height="130dp"
+        android:layout_width="265dp"
+        android:layout_height="100dp"
         android:clickable="false"
-        android:text="Apod Picture"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/Imagesbutton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.452"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appNameTextView"
-        app:layout_constraintVertical_bias="0.622"
+        app:layout_constraintVertical_bias="0.742"
         app:srcCompat="@drawable/header"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="229dp"
-        android:layout_height="45dp"
+        android:layout_width="215dp"
+        android:layout_height="49dp"
         android:gravity="center"
         android:text="Atsronomy Picture of the day"
         android:textColor="#FFEB3B"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/button1"
+        app:layout_constraintEnd_toEndOf="@+id/button1"
+        app:layout_constraintStart_toStartOf="@+id/button1"
         app:layout_constraintTop_toTopOf="@+id/button1"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="91dp" />
+        app:layout_constraintVertical_bias="0.45"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
