--- a/app/src/main/res/layout/activity_techport.xml
+++ b/app/src/main/res/layout/activity_techport.xml
@@ -8,35 +8,75 @@
 
     <TextView
         android:id="@+id/textintro"
-        android:layout_width="384dp"
-        android:layout_height="430dp"
+        android:layout_width="303dp"
+        android:layout_height="190dp"
+        android:fontFamily="casual"
         android:text="@string/the_techport_team_is_a_unique_group_whose_primary_goal_is_technology_communication_it_is_dedicated_to_finding_innovative_and_engaging_ways_to_document_highlight_visualize_and_advocate_for_the_amazing_technology_development_work_occurring_at_nasa_it_includes_developers_designers_architects_and_engineers_if_you_have_an_amazing_project_that_you_feel_may_change_the_life_for_the_better_then_fill_your_email_address_below_and_be_part_of_the_team"
-        android:textSize="24sp"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.407"
+        app:layout_constraintHorizontal_bias="0.37"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.106" />
+        app:layout_constraintVertical_bias="0.439" />
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etValue"
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginBottom="48dp"
+        android:layout_width="162dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="28dp"
         app:layout_constraintBottom_toTopOf="@+id/btnSubmit1"
-        tools:layout_editor_absoluteX="-15dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.116"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnSubmit1"
-        android:layout_width="142dp"
-        android:layout_height="60dp"
+        android:layout_width="110dp"
+        android:layout_height="49dp"
         android:text="SUBMIT"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.134"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textintro"
-        app:layout_constraintVertical_bias="0.792" />
+        app:layout_constraintVertical_bias="0.777" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnFetch"
+        android:layout_width="120dp"
+        android:layout_height="49dp"
+        android:text="Check Email"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.822"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.943" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvValue"
+        android:layout_width="140dp"
+        android:layout_height="62dp"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.925"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.786" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="356dp"
+        android:layout_height="122dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.457"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.052"
+        app:srcCompat="@drawable/techport" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
