--- a/app/src/main/res/layout/activity_apod_detail.xml
+++ b/app/src/main/res/layout/activity_apod_detail.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content">
 
         <androidx.viewpager.widget.PagerTabStrip
-            android:id="@+id/Apodimage"
+            android:id="@+id/pagerHeader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="4dp"
